[gd_scene load_steps=3 format=3 uid="uid://cbqn24tk2tihe"]

[ext_resource type="Script" path="res://Scripts/map/blocks/Entity_Block.gd" id="1_ubj6l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sp15k"]
size = Vector2(16, 16)

[node name="Entity_block" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_ubj6l")

[node name="Sprite2D" type="Sprite2D" parent="."]
region_enabled = true
region_rect = Rect2(128, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sp15k")

[node name="BreakTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="BreakTimer" to="." method="_on_break_timer_timeout"]
